--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sparkhome",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.24",
     "next": "14.1.1",
+    "next-intl": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
+    "tailwind-merge": "^2.2.2",
     "valid-url": "^1.0.9",
     "validate-color": "^2.2.4"
   },
