--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.24",
     "next": "14.1.1",
     "next-intl": "^3.10.0",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
@@ -21,13 +23,18 @@
     "validate-color": "^2.2.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/punycode": "^2.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/valid-url": "^1.0.7",
     "autoprefixer": "^10.0.1",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
