--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.2",
+    "ts-node": "^10.9.2",
     "valid-url": "^1.0.9",
     "validate-color": "^2.2.4"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/punycode": "^2.1.4",
@@ -32,6 +35,7 @@
     "@types/valid-url": "^1.0.7",
     "autoprefixer": "^10.0.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.2",
