feature: engine change & nextui

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.24",
-    "next": "14.1.1",
+    "next": "14.1.4",
     "next-intl": "^3.10.0",
+    "next-themes": "^0.3.0",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
