--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sparkhome",
-  "version": "4.2.0",
+  "version": "4.10.0",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -12,14 +12,15 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.0.25",
     "next": "14.1.4",
-    "next-intl": "^3.10.0",
+    "next-intl": "^3.11.1",
     "next-themes": "^0.3.0",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
+    "search-engine-autocomplete": "^0.4.2",
     "tailwind-merge": "^2.2.2",
     "ts-node": "^10.9.2",
     "valid-url": "^1.0.9",
@@ -28,19 +29,19 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
+    "@testing-library/react": "^14.3.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20",
+    "@types/node": "^20.12.6",
     "@types/punycode": "^2.1.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
     "@types/valid-url": "^1.0.7",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.2",
-    "typescript": "^5"
+    "typescript": "^5.4.4"
   }
 }
