--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.4",
     "next-intl": "^3.12.0",
     "next-themes": "^0.3.0",
+    "pino": "^9.0.0",
     "punycode": "^2.3.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
