--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sparkhome",
-  "version": "4.10.2",
+  "version": "4.17.0",
   "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:NLP": "tsx ./lib/nlp/train.ts",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -14,11 +15,19 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@nlpjs/basic": "^4.27.0",
+    "@nlpjs/builtin-compromise": "^4.26.1",
+    "@nlpjs/core": "^4.26.1",
+    "@nlpjs/lang-en-min": "^4.26.1",
+    "@nlpjs/lang-zh": "^4.26.1",
+    "@nlpjs/nlp": "^4.27.0",
     "clsx": "^2.1.1",
+    "fflate": "^0.8.2",
     "framer-motion": "^11.1.7",
     "next": "14.1.4",
     "next-intl": "^3.12.0",
     "next-themes": "^0.3.0",
+    "openmeteo": "^1.1.4",
     "pino": "^9.0.0",
     "punycode": "^2.3.1",
     "react": "^18.3.0",
@@ -26,7 +35,6 @@
     "recoil": "^0.7.7",
     "search-engine-autocomplete": "^0.4.3",
     "tailwind-merge": "^2.3.0",
-    "ts-node": "^10.9.2",
     "unicode-encode": "^1.4.2",
     "valid-url": "^1.0.9",
     "validate-color": "^2.2.4"
@@ -48,6 +56,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.2",
+    "tsx": "^4.15.6",
     "typescript": "^5.4.5",
     "vitepress": "^1.2.3",
     "vue": "^3.4.29"
