--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "sparkhome",
     "private": false,
-    "version": "5.1.0",
+    "version": "5.2.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "bunx --bun vite",
         "build": "tsc -b && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
