--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "NODE_ENV=production bun server.ts"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.1",
     "@nextui-org/react": "^2.4.2",
     "@types/express": "^4.17.21",
     "cac": "^6.7.14",
