--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sparkhome",
   "private": false,
-  "version": "5.2.1",
+  "version": "5.2.2",
   "type": "module",
   "scripts": {
     "dev": "bun server.ts",
@@ -21,6 +21,7 @@
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-icu": "^2.3.0",
+    "jest": "^29.7.0",
     "jotai": "^2.8.3",
     "node-nlp": "^4.27.0",
     "react": "^18.3.1",
