--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sparkhome",
   "private": false,
-  "version": "5.5.1",
+  "version": "5.5.2",
   "type": "module",
   "scripts": {
     "dev": "bun server.ts",
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.2",
     "@types/bun": "^1.1.6",
     "@types/express": "^4.17.21",
+    "@types/tr46": "^5.0.0",
     "cac": "^6.7.14",
     "chalk": "^5.3.0",
     "express": "^4.19.2",
@@ -31,6 +32,7 @@
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "search-engine-autocomplete": "^0.4.3",
+    "tr46": "^5.0.0",
     "valid-url": "^1.0.9",
     "validate-color": "^2.2.4",
     "vite-express": "^0.17.0"
