--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sparkhome",
   "private": false,
-  "version": "5.5.3",
+  "version": "5.6.0",
   "type": "module",
   "scripts": {
     "dev": "bun server.ts",
@@ -52,6 +52,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
+    "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-pages": "^0.32.2",
     "vite-tsconfig-paths": "^4.3.2"
   }
