--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "bun server.ts",
-    "build": "tsc -b && vite build",
+    "build": "bun license-gen && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "NODE_ENV=production bun server.ts"
+    "preview": "NODE_ENV=production bun server.ts",
+    "license-gen": "bunx generate-license-file --input package.json --output lib/license.txt --overwrite"
   },
   "dependencies": {
     "@iconify/react": "^5.0.1",
@@ -20,6 +21,7 @@
     "express": "^4.19.2",
     "fflate": "^0.8.2",
     "framer-motion": "^11.2.12",
+    "generate-license-file": "^3.5.1",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-icu": "^2.3.0",
