--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-	"name": "sparkhome",
-	"private": false,
-	"version": "5.8.0",
-	"type": "module",
-	"scripts": {
-		"dev": "bun server.ts",
-		"build": "bun license-gen && tsc -b && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "NODE_ENV=production bun server.ts",
-		"license-gen": "bunx generate-license-file --input package.json --output lib/license.txt --overwrite",
-		"format": "prettier --write ."
-	},
-	"dependencies": {
-		"@iconify/react": "^5.0.1",
-		"@nextui-org/react": "^2.4.2",
-		"@types/bun": "^1.1.6",
-		"@types/express": "^4.17.21",
-		"@types/tr46": "^5.0.0",
-		"cac": "^6.7.14",
-		"chalk": "^5.3.0",
-		"express": "^4.19.2",
-		"fflate": "^0.8.2",
-		"framer-motion": "^11.2.12",
-		"generate-license-file": "^3.5.1",
-		"i18next": "^23.11.5",
-		"i18next-browser-languagedetector": "^8.0.0",
-		"i18next-icu": "^2.3.0",
-		"jest": "^29.7.0",
-		"jotai": "^2.8.3",
-		"node-nlp": "^4.27.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-i18next": "^14.1.2",
-		"react-router": "^6.23.1",
-		"react-router-dom": "^6.23.1",
-		"search-engine-autocomplete": "^0.4.3",
-		"tr46": "^5.0.0",
-		"valid-url": "^1.0.9",
-		"validate-color": "^2.2.4",
-		"vite-express": "^0.17.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@types/valid-url": "^1.0.7",
-		"@typescript-eslint/eslint-plugin": "^7.13.1",
-		"@typescript-eslint/parser": "^7.13.1",
-		"@vitejs/plugin-react-swc": "^3.5.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-react-refresh": "^0.4.7",
-		"postcss": "^8.4.38",
-		"prettier": "^3.3.3",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.2.2",
-		"vite": "^5.3.1",
-		"vite-plugin-chunk-split": "^0.5.0",
-		"vite-plugin-pages": "^0.32.2",
-		"vite-tsconfig-paths": "^4.3.2"
-	}
+  "name": "sparkhome",
+  "private": false,
+  "version": "5.8.0",
+  "type": "module",
+  "scripts": {
+    "dev": "bun server.ts",
+    "build": "bun license-gen && tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "NODE_ENV=production bun server.ts",
+    "license-gen": "bunx generate-license-file --input package.json --output lib/license.txt --overwrite",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@iconify/react": "^5.0.1",
+    "@nextui-org/react": "^2.4.2",
+    "@types/bun": "^1.1.6",
+    "@types/express": "^4.17.21",
+    "@types/tr46": "^5.0.0",
+    "@xenova/transformers": "^2.17.2",
+    "cac": "^6.7.14",
+    "chalk": "^5.3.0",
+    "express": "^4.19.2",
+    "fflate": "^0.8.2",
+    "framer-motion": "^11.2.12",
+    "generate-license-file": "^3.5.1",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-icu": "^2.3.0",
+    "jest": "^29.7.0",
+    "jotai": "^2.8.3",
+    "node-nlp": "^4.27.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "search-engine-autocomplete": "^0.4.3",
+    "tr46": "^5.0.0",
+    "valid-url": "^1.0.9",
+    "validate-color": "^2.2.4",
+    "vite-express": "^0.17.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/valid-url": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1",
+    "vite-plugin-chunk-split": "^0.5.0",
+    "vite-plugin-pages": "^0.32.2",
+    "vite-tsconfig-paths": "^4.3.2"
+  }
 }
