add: basic infra for new NLU system

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sparkhome",
   "private": false,
-  "version": "5.8.0",
+  "version": "5.8.1",
   "type": "module",
   "scripts": {
     "dev": "bun server.ts",
@@ -30,12 +30,12 @@
     "jest": "^29.7.0",
     "jotai": "^2.8.3",
     "node-nlp": "^4.27.0",
+    "onnxruntime-web": "^1.20.0-dev.20240925-a47254eaef",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
-    "search-engine-autocomplete": "^0.4.3",
     "tr46": "^5.0.0",
     "valid-url": "^1.0.9",
     "validate-color": "^2.2.4",
