--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@alikia/search-complete": "^0.4.4",
 		"@iconify/react": "^5.0.1",
 		"@nextui-org/react": "^2.4.2",
 		"@types/bun": "^1.1.6",
